Bug 473782 - The Symmetry line and manipulator is always hidden in 5.2 Beta 2
Summary: The Symmetry line and manipulator is always hidden in 5.2 Beta 2
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 5.2.0-beta2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2023-08-26 18:31 UTC by Simon
Modified: 2023-08-31 07:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon 2023-08-26 18:31:57 UTC
SUMMARY
If you activate Symmetry (X or Y) the line is always hidden and activating/deactivating the hide symmetry line does not change this.

STEPS TO REPRODUCE
1.  Open Krita Beta 5.2.0 Beta 2
2.  Create a new document.
3. Select brush
4. Activate Symmetry either X or Y or both.

OBSERVED RESULT

Observe the issue: The symmetry line is not shown including the manipulater is missing for moving the symmetry line.


EXPECTED RESULT
You should see the symmetry line and handing ui if you do not have it hidden.

SOFTWARE/OS VERSIONS
Windows: 11 lates version
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION

Running on Surface Laptop Studio with both Intel and Geforce GPU. Latest drivers and Windows.
Running on the Dark Orange contrast Theme but it happens with any theme.
Slightly customized UI but no plugins or anything installed beside custom brushes.
Comment 1 Alvin Wong 2023-08-27 17:05:10 UTC
I cannot reproduce this on nightly. Are you sure you haven't toggled the option to hide the symmetry line in the dropdown menu?

If that is the case, please provide the text in "Help" -> "Show system information for bug reports".
Comment 2 Alvin Wong 2023-08-29 15:35:11 UTC
I managed to reproduce this with Intel graphics on Windows and renderer set to OpenGL. This is indeed caused by some code changes between 5.1 and 5.2 and will probably be fixed soon™.

Regardless, we do not recommend using the OpenGL renderer with Intel graphics so I strongly recommend you to either change the renderer to ANGLE, or to ensure that Krita always runs with Nvidia GPU since you have one (should be configurable from Windows settings).

(For tracking, probably caused by https://invent.kde.org/graphics/krita/-/merge_requests/1726)
Comment 3 Bug Janitor Service 2023-08-29 16:41:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1925
Comment 4 Dmitry Kazakov 2023-08-30 11:57:42 UTC
Git commit a2eeadeee6b033496acaca22b9f70ef0f7f87e6e by Dmitry Kazakov, on behalf of Alvin Wong.
Committed on 30/08/2023 at 13:55.
Pushed by dkazakov into branch 'krita/5.2'.

OpenGL: Request DeprecatedFunctions on Windows to fix Intel driver

Some parts of Qt seems to require deprecated functions. On Windows with
the Intel Graphics driver, things like canvas decorations and the Touch
Docker does not render without this option. It was previously removed in
2aef884127 (MR !1726).

M  +6    -0    libs/ui/opengl/kis_opengl.cpp

https://invent.kde.org/graphics/krita/-/commit/a2eeadeee6b033496acaca22b9f70ef0f7f87e6e
Comment 5 Dmitry Kazakov 2023-08-30 11:57:52 UTC
Git commit 8a8f6962a1b583186a2585954db40b226feb8487 by Dmitry Kazakov, on behalf of Alvin Wong.
Committed on 30/08/2023 at 13:57.
Pushed by dkazakov into branch 'master'.

OpenGL: Request DeprecatedFunctions on Windows to fix Intel driver

Some parts of Qt seems to require deprecated functions. On Windows with
the Intel Graphics driver, things like canvas decorations and the Touch
Docker does not render without this option. It was previously removed in
2aef884127 (MR !1726).

M  +6    -0    libs/ui/opengl/kis_opengl.cpp

https://invent.kde.org/graphics/krita/-/commit/8a8f6962a1b583186a2585954db40b226feb8487
Comment 6 Simon 2023-08-31 07:00:41 UTC
(In reply to Alvin Wong from comment #2)
> I managed to reproduce this with Intel graphics on Windows and renderer set
> to OpenGL. This is indeed caused by some code changes between 5.1 and 5.2
> and will probably be fixed soon™.
> 
> Regardless, we do not recommend using the OpenGL renderer with Intel
> graphics so I strongly recommend you to either change the renderer to ANGLE,
> or to ensure that Krita always runs with Nvidia GPU since you have one
> (should be configurable from Windows settings).
> 
> (For tracking, probably caused by
> https://invent.kde.org/graphics/krita/-/merge_requests/1726)

I can confirm that I was running OpenGL for some reasons... (Might be some testing I was doing back a while ago)
If I switch to DX it works as intended on my system.