OpenGL: Request DeprecatedFunctions on Windows to fix Intel driver

Some parts of Qt seems to require deprecated functions. On Windows with
the Intel Graphics driver, things like canvas decorations and the Touch
Docker does not render without this option. It was previously removed in
2aef884127 (MR !1726).

BUG:473782